syntax="proto3";

package auth;

option go_package="/auth_grpc";

service AuthService{
rpc Register(RegisterRequest) returns (AuthResponse);
rpc Login(LoginRequest) returns (AuthResponse);
rpc ValidateToken(ValidateTokenRequest) returns (AuthResponse);

}

message RegisterRequest{
  string name=1;
  string email=2;
  string password=3;

}


message LoginRegister{
  string email=1;
  string password=2;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message ValidateTokenRequest{
  string token=1;
}


message AuthResponse{
  string message=1;
  string token=2;
  int32 user_id=3;
}
